--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -20,14 +20,14 @@ $basic-white: #ffffff;
 $basic-black: #050038;
 $basic-blue: #0555ff;
 $basic-link: #7884a6;
+$basic-grey: #919191;
 
 $background-dark: #303030;
 $background-white: #f9f9f9;
-$background-blud: #130c3a;
+$background-blue: #130c3a;
 $background-grey: #f8f8fa;
 
 $hover-blue: #0554ff69;
-$basic-grey: #919191;
 
 //@mixin blueGradient {
 //  background: linear-gradient(
