--- a/src/components/LandingBanner/LandingBanner.module.scss
+++ b/src/components/LandingBanner/LandingBanner.module.scss
@@ -3,6 +3,7 @@
 .container {
 	@include fluid(margin-top, 60px, 100px);
 	@include fluid(margin-bottom, 60px, 100px);
+
 	display: flex;
 	justify-content: space-between;
 }
@@ -24,6 +25,8 @@
 	@include fluid(margin-top, 30px, 40px);
 	@include fluid(margin-bottom, 30px, 40px);
 	@include fluid(font-size, 16px, 24px);
+
+	line-height: 25px;
 }
 .button {
 	display: flex;
