--- a/src/components/LandingInfo/LandingInfo.module.scss
+++ b/src/components/LandingInfo/LandingInfo.module.scss
@@ -1,8 +1,10 @@
 @import "../../../styles/mixins.scss";
 
 .container {
+	@include fluid(padding-top, 70px, 100px);
+	@include fluid(padding-bottom, 70px, 100px);
+
 	border-top: 1px solid rgba(0, 0, 0, 0.1);
-	padding-top: 100px;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
@@ -14,9 +16,9 @@
 }
 
 .subtitle {
-	@include fluid(margin-top, 10px, 20px);
+	@include fluid(margin-top, 20px, 30px);
 	@include fluid(margin-bottom, 30px, 40px);
 	@include fluid(font-size, 16px, 24px);
 
-	line-height: 25px;
+	line-height: 30px;
 }
