--- a/src/components/LandingHeader/LandingHeader.module.scss
+++ b/src/components/LandingHeader/LandingHeader.module.scss
@@ -23,14 +23,16 @@
 
 .navigation {
 	display: flex;
+	flex-grow: 1;
+	justify-content: space-evenly;
 
 	@media screen and (max-width: $breakpoint-md) {
+		justify-content: center;
 		flex-direction: column;
 	}
 }
 .navItem {
 	@include fluid(font-size, 16px, 24px);
-	@include fluid(margin-right, 20px, 30px);
 
 	color: $basic-black;
 
