--- a/src/components/LandingHeader/LandingHeader.module.scss
+++ b/src/components/LandingHeader/LandingHeader.module.scss
@@ -13,11 +13,11 @@
 .logo {
 	@include fluid(font-size, 28px, 36px);
 
-	font-weight: 400;
+	font-weight: 700;
 	color: $basic-black;
 }
 .logoSpan {
-	font-weight: 700;
+	// font-weight: 700;
 	color: $basic-blue;
 }
 
@@ -53,7 +53,6 @@
 		margin: 0;
 	}
 }
-
 .burger {
 	@include fluid(margin-right, 10px, 15px);
 
@@ -76,7 +75,7 @@
 }
 .contactTitle {
 	@include fluid(font-size, 16px, 18px);
-	@include fluid(margin-bottom, 20px, 40px);
+	@include fluid(margin-bottom, 10px, 20px);
 }
 .contactButtons {
 	display: flex;
