--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -31,3 +31,10 @@ body {
 	min-height: 100vh;
 	justify-content: space-between;
 }
+
+.spinner {
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
