--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -10,6 +10,7 @@
 }
 .item {
 	width: 48%;
+	position: relative;
 
 	border-radius: 30px;
 	background: rgb(249, 249, 249);
@@ -19,7 +20,9 @@
 	cursor: pointer;
 
 	&:hover {
-		box-shadow: 0px 5px 40px 2px rgba(34, 60, 80, 0.2);
+		margin: -15px 0;
+
+		box-shadow: 0px 5px 40px 2px rgba(34, 60, 80, 0.3);
 	}
 
 	@media screen and (max-width: $breakpoint-md) {
@@ -46,7 +49,6 @@
 
 .description {
 	@include fluid(font-size, 18px, 22px);
-	@include fluid(margin-bottom, 40px, 60px);
 
 	color: rgb(131, 131, 131);
 }
