--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -11,13 +11,25 @@
 	@include container;
 	display: flex;
 	justify-content: space-between;
+
+	@media screen and (max-width: $breakpoint-md) {
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
 }
 .logo {
 	@include fluid(margin-bottom, 20px, 40px);
 	@include fluid(font-size, 34px, 42px);
 
 	color: $basic-white;
+	width: 30%;
 	font-weight: 700;
+
+	@media screen and (max-width: $breakpoint-md) {
+		width: 100%;
+		text-align: center;
+	}
 }
 .logoSpan {
 	color: $basic-blue;
@@ -28,15 +40,42 @@
 	@include fluid(margin-bottom, 40px, 60px);
 }
 .list {
+	display: flex;
+	text-align: end;
+	flex-direction: column;
 	list-style: none;
+	width: 30%;
+
+	@media screen and (max-width: $breakpoint-md) {
+		width: 100%;
+		text-align: center;
+		margin-top: 20px;
+	}
 }
 .item {
 	@include fluid(margin-bottom, 10px, 20px);
-	@include fluid(font-size, 22px, 28px);
+	@include fluid(font-size, 18px, 22px);
 	font-weight: 300;
 	color: $basic-grey;
 
 	&:last-child {
 		margin: 0;
+	}
+}
+.navigation {
+	display: flex;
+	flex-direction: column;
+	text-align: center;
+	flex-grow: 1;
+	gap: 10px;
+}
+.link {
+	@include fluid(font-size, 16px, 24px);
+	color: $basic-white;
+	transition: $trn;
+
+	&:hover {
+		opacity: 0.7;
+		transform: scale(1.1);
 	}
 }
