--- a/src/components/Services/Services.module.scss
+++ b/src/components/Services/Services.module.scss
@@ -20,8 +20,7 @@
 	cursor: pointer;
 
 	&:hover {
-		margin: -15px 0;
-
+		transform: scale(1.03);
 		box-shadow: 0px 5px 40px 2px rgba(34, 60, 80, 0.3);
 	}
 
@@ -37,7 +36,7 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	background: #ccc;
+	background: #d9e8ff;
 }
 .content {
 	@include fluid(padding, 30px, 50px);
@@ -56,4 +55,19 @@
 	display: flex;
 	justify-content: flex-end;
 	color: $basic-blue;
+}
+
+.contact {
+	cursor: pointer;
+	@include fluid(font-size, 18px, 22px);
+	@include fluid(margin-top, 20px, 40px);
+	@include fluid(margin-bottom, 20px, 40px);
+	display: flex;
+	justify-content: center;
+	transition: $trn;
+	color: $basic-blue;
+
+	&:hover {
+		transform: scale(1.05);
+	}
 }
